--- a/package.json
+++ b/package.json
@@ -131,6 +131,7 @@
     "react-textarea-autosize": "^8.2.0",
     "react-use-css-breakpoints": "^1.0.3",
     "resize-observer-polyfill": "^1.5.1",
+    "sanitize-html": "^2.3.2",
     "screenfull": "^4.0.1",
     "semver": "^7.3.2",
     "socket.io-client": "^2.3.0",
