--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
     "jwt-decode": "^2.2.0",
     "lib-hubs": "github:mozillareality/lib-hubs#master",
     "linkify-it": "^2.0.3",
+    "linkifyjs": "^3.0.0-beta.3",
     "markdown-it": "^8.4.2",
     "moving-average": "^1.0.0",
     "naf-janus-adapter": "^4.0.1",
